syntax = "proto3";
package lavanet.lava.dualstaking;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/lavanet/lava/v4/x/dualstaking/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  cosmos.base.v1beta1.Coin min_self_delegation = 1 [(gogoproto.nullable) = false]; // min self delegation for provider
}

// SlashedValidators defines the a list of slashed validators.
message SlashedValidators {
	repeated string validators = 1; 
}
