syntax = "proto3";
package lavanet.lava.pairing;

option go_package = "github.com/lavanet/lava/v3/x/pairing/types";

import "gogoproto/gogo.proto";
import "google/protobuf/wrappers.proto";
import "cosmos/base/v1beta1/coin.proto";

message UnstakeProposal {
  option (gogoproto.goproto_getters)  = false;

  string title = 1; 
  string description = 2; 
  repeated ProviderUnstakeInfo providers_info = 3 [(gogoproto.nullable) = false]; 
  repeated DelegatorSlashing DelegatorsSlashing = 4 [(gogoproto.nullable) = false]; 

}

message ProviderUnstakeInfo {
  string provider = 1;
  string chain_id = 2;
}

message DelegatorSlashing {
  string delegator = 1;
  cosmos.base.v1beta1.Coin slashing_amount = 2 [(gogoproto.nullable) = false];
}